--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.3.1",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
