--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "build": "prisma generate && next build",
   "prisma": {
     "seed": "pnpm tsx prisma/seed.ts"
   },
